# lazymanc.net

./: CNAME  README.md  stack.yaml
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/doc/Solutions-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/flag-cache/: Solutions-0.1.0.0-1VJBuUbXTsFjQS1tcibGK
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/lib/x86_64-linux-ghc-8.0.2/Solutions-0.1.0.0-1VJBuUbXTsFjQS1tcibGK/: C2.dyn_hi  C2.hi  C3.dyn_hi  C3.hi  C4.dyn_hi  C4.hi  C5.dyn_hi  C5.hi  C6.dyn_hi  C6.hi  ChrisC6.dyn_hi  ChrisC6.hi  Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-9.11/8.0.2/pkgdb/: Solutions-0.1.0.0-1VJBuUbXTsFjQS1tcibGK.conf  package.cache
HaskellBookSolutions/app/: FingerdDebugAdam.hs  Main.hs  MiguelC29.hs  VigenereAdam.hs
HaskellBookSolutions/src/Adam/: C03.hs  C08.hs  C09.hs  C10.hs  C11.hs  C15.hs  C16.hs  C22.hs  C25.hs
HaskellBookSolutions/src/Adam/NinetyNineProblems/: README.md
HaskellBookSolutions/src/Chris/: ChrisC12.hs  ChrisC15.hs  ChrisC18.hs  ChrisC6.hs  ChrisC9.hs  ChrisCipher.hs
HaskellBookSolutions/src/Max/: C12.hs
HaskellBookSolutions/src/Miguel/: Chapter 15 - Monoid Semigroup.ipynb  Chapter 18 Monad.ipynb  Chapter 20 Foldable.ipynb  Chapter 23 State.ipynb  Chapter 5 - Types.ipynb  Chapter 6 - Type classes.ipynb
HaskellBookSolutions/src/Santi/: C1-3.hs  C10.hs  C11.hs
HaskellBookSolutions/test/: MiguelSpec.hs  Spec.hs
Solutions/: .ghci  Solutions.cabal  stack.yaml
Solutions/app/: FingerdAdam.hs  VignereAdam.hs
Solutions/src/: C2.hs  C4.hs  C5.hs  C6.hs  Lib.hs
Solutions/src/Adam/: C02.hs  C04.hs  C05.hs  C06.hs  C07.hs  C09.hs  C10.hs  C11.hs  C12.hs  C16.hs  C17.hs  C18.hs  C23.hs  C25.hs  C3.hs  C7.hs  C8.hs  Cipher.hs  Demo.lhs  Hangman.hs  Lib.hs  NinetyNineProblems.hs
Solutions/src/Adam/Advent2017/: Day01.hs
Solutions/src/Chris/: ChrisC10.hs  ChrisC11.hs  ChrisC12.hs  ChrisC20.hs  ChrisC7.hs  ChrisC8.hs  ChrisC9.hs
Solutions/src/Chris/Test/: ChrisAddition.hs  ChrisMonoidLaws.hs
Solutions/src/Miguel/: Chapter 12 - Signaling adversity.ipynb  Chapter 25 E Pluribus Monad.ipynb  MiguelC21.hs  MiguelVigenere.hs
Solutions/src/Santi/: C09.hs
Solutions/test/: Spec.hs
ThinkingWithTypes/Adam/: ch1.hs  ch2.hs  ch3.hs  ch4.hs  ch5.hs
