name:                Solutions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ahri/lazymanc.net/Solutions
license:             BSD3
license-file:        LICENSE
author:              lazymanc.net
maintainer:          solutions@lazymanc.net
copyright:           2017 lazymanc.net
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/Adam
                       src/Adam/Advent2017
                       src/Chris
  exposed-modules:     Lib
  other-modules:       C02, C03, C04, C05, C06, ChrisC6, ChrisC7, ChrisC8, ChrisC9, ChrisCipher, ChrisC10, C07, C08, C09, Cipher, C10, C11, Day01
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.6.0.1 && < 1.7
  default-language:    Haskell2010

executable Solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , Solutions
  default-language:    Haskell2010

test-suite Solutions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Solutions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Solutions
